crates/know_now_diagnostics/tests/snapshots/snapshots__json_minimal_diagnostic_snapshot.snap
---
source: crates/know_now_diagnostics/tests/snapshots.rs
expression: pretty
---
{
  "code": "WARN-001",
  "message": "something is off",
  "severity": "warning"
}
