crates/know_now_diagnostics/tests/snapshots/snapshots__text_minimal_diagnostic_snapshot.snap
---
source: crates/know_now_diagnostics/tests/snapshots.rs
expression: output
---
warning[WARN-001]: something is off
